// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SmsVerificationCard > matches snapshot 1`] = `
<div
  class="mx-auto w-full flex-col flex relative flex-1"
  data-testid="container"
>
  <div
    class="flex flex-col bg-card text-card-foreground shadow-sm flex-1 gap-0 rounded-md p-6 lg:p-12"
    data-slot="card"
    data-testid="sms-verification-card"
  >
    <div
      class="mx-auto flex w-full flex-col gap-4 lg:flex-row lg:items-start lg:gap-12"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col hidden w-48 shrink-0 lg:block"
        data-testid="container"
      >
        <img
          alt="Lime Pubky phone representing SMS verification"
          class="max-w-full size-48"
          height="600"
          src="/images/sms-verification-phone.webp"
          width="800"
        />
      </div>
      <div
        class="mx-auto flex w-full flex-col gap-4 lg:max-w-xl lg:flex-1 lg:gap-6"
        data-testid="container"
      >
        <div
          class="mx-auto flex w-full flex-col gap-3"
          data-testid="container"
        >
          <div
            class="mx-auto w-full flex flex-row items-center justify-between gap-4 lg:justify-start"
            data-testid="container"
          >
            <h3
              class="m-0 text-[20px] leading-none font-bold text-foreground lg:text-2xl lg:leading-8"
              data-testid="typography"
            >
              Phone Number
            </h3>
            <div
              class="inline-flex items-center justify-center w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-secondary/90 rounded-md border-0 bg-primary px-2 py-[2px] text-sm font-semibold tracking-wide text-primary-foreground uppercase lg:hidden"
              data-slot="badge"
              data-variant="secondary"
            >
              Free
            </div>
          </div>
          <p
            class="hidden text-5xl leading-none font-bold text-brand lg:block lg:text-6xl"
            data-testid="typography"
          >
            Free
          </p>
          <p
            class="mt-1 text-sm font-bold tracking-widest text-muted-foreground uppercase lg:mt-0 lg:text-xs lg:font-medium lg:tracking-[1.2px]"
            data-testid="typography"
          >
            LESS PRIVATE, BUT EASY
          </p>
          <div
            class="mx-auto w-full hidden flex-col lg:flex"
            data-testid="container"
          >
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1GB storage
            </p>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1MB/s speed limit
            </p>
          </div>
        </div>
        <div
          class="mx-auto w-full flex-col flex gap-2 lg:hidden"
          data-testid="container"
        >
          <div
            class="mx-auto w-full flex flex-row items-center gap-2"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-6 shrink-0 text-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1GB storage
            </p>
          </div>
          <div
            class="mx-auto w-full flex flex-row items-center gap-2"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-6 shrink-0 text-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1MB/s speed limit
            </p>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border bg-secondary text-secondary-foreground hover:bg-accent gap-1 py-2 has-[>svg]:px-4 h-10 w-full shrink-0 rounded-full px-4 text-sm font-semibold shadow-xs lg:w-auto lg:self-start"
          data-slot="button"
          data-testid="human-sms-card-receive-sms-btn"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smartphone mr-2 size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="20"
              rx="2"
              ry="2"
              width="14"
              x="5"
              y="2"
            />
            <path
              d="M12 18h.01"
            />
          </svg>
          Receive Code
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SmsVerificationCard > matches snapshot when geoblocked 1`] = `
<div
  class="mx-auto w-full flex-col flex relative flex-1"
  data-testid="container"
>
  <div
    class="flex flex-col bg-card text-card-foreground shadow-sm flex-1 gap-0 rounded-md p-6 lg:p-12 pointer-events-none opacity-60 blur-[5px]"
    data-slot="card"
    data-testid="sms-verification-card"
  >
    <div
      class="mx-auto flex w-full flex-col gap-4 lg:flex-row lg:items-start lg:gap-12"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col hidden w-48 shrink-0 lg:block"
        data-testid="container"
      >
        <img
          alt="Lime Pubky phone representing SMS verification"
          class="max-w-full size-48"
          height="600"
          src="/images/sms-verification-phone.webp"
          width="800"
        />
      </div>
      <div
        class="mx-auto flex w-full flex-col gap-4 lg:max-w-xl lg:flex-1 lg:gap-6"
        data-testid="container"
      >
        <div
          class="mx-auto flex w-full flex-col gap-3"
          data-testid="container"
        >
          <div
            class="mx-auto w-full flex flex-row items-center justify-between gap-4 lg:justify-start"
            data-testid="container"
          >
            <h3
              class="m-0 text-[20px] leading-none font-bold text-foreground lg:text-2xl lg:leading-8"
              data-testid="typography"
            >
              Phone Number
            </h3>
            <div
              class="inline-flex items-center justify-center w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-secondary/90 rounded-md border-0 bg-primary px-2 py-[2px] text-sm font-semibold tracking-wide text-primary-foreground uppercase lg:hidden"
              data-slot="badge"
              data-variant="secondary"
            >
              Free
            </div>
          </div>
          <p
            class="hidden text-5xl leading-none font-bold text-brand lg:block lg:text-6xl"
            data-testid="typography"
          >
            Free
          </p>
          <p
            class="mt-1 text-sm font-bold tracking-widest text-muted-foreground uppercase lg:mt-0 lg:text-xs lg:font-medium lg:tracking-[1.2px]"
            data-testid="typography"
          >
            LESS PRIVATE, BUT EASY
          </p>
          <div
            class="mx-auto w-full hidden flex-col lg:flex"
            data-testid="container"
          >
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1GB storage
            </p>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1MB/s speed limit
            </p>
          </div>
        </div>
        <div
          class="mx-auto w-full flex-col flex gap-2 lg:hidden"
          data-testid="container"
        >
          <div
            class="mx-auto w-full flex flex-row items-center gap-2"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-6 shrink-0 text-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1GB storage
            </p>
          </div>
          <div
            class="mx-auto w-full flex flex-row items-center gap-2"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-6 shrink-0 text-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <p
              class="text-base leading-6 font-medium text-secondary-foreground/80"
              data-testid="typography"
            >
              1MB/s speed limit
            </p>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border bg-secondary text-secondary-foreground hover:bg-accent gap-1 py-2 has-[>svg]:px-4 h-10 w-full shrink-0 rounded-full px-4 text-sm font-semibold shadow-xs lg:w-auto lg:self-start"
          data-slot="button"
          data-testid="human-sms-card-receive-sms-btn"
          data-variant="secondary"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smartphone mr-2 size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="20"
              rx="2"
              ry="2"
              width="14"
              x="5"
              y="2"
            />
            <path
              d="M12 18h.01"
            />
          </svg>
          Receive Code
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute top-1/2 left-1/2 flex h-11 -translate-x-1/2 -translate-y-1/2 items-center gap-3 rounded-md bg-destructive/60 px-6 py-3 shadow-xl"
    data-testid="geoblock-alert"
  >
    <div
      class="pt-0.5"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert size-4 text-destructive-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </div>
    <p
      class="text-sm font-semibold whitespace-nowrap text-destructive-foreground"
      data-testid="typography"
    >
      Currently not available in your country
    </p>
  </div>
</div>
`;

exports[`SmsVerificationCard > matches snapshot when loading 1`] = `
<div
  class="mx-auto w-full flex-col flex relative flex-1"
  data-testid="container"
>
  <div
    class="flex flex-col bg-card text-card-foreground shadow-sm flex-1 gap-0 rounded-md p-6 lg:p-12"
    data-slot="card"
    data-testid="sms-verification-card-skeleton"
  >
    <div
      class="mx-auto flex w-full flex-col gap-4 lg:flex-row lg:items-start lg:gap-12"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col hidden w-48 shrink-0 lg:block"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted size-48 rounded"
          data-slot="skeleton"
        />
      </div>
      <div
        class="mx-auto flex w-full flex-col gap-4 lg:max-w-xl lg:flex-1 lg:gap-6"
        data-testid="container"
      >
        <div
          class="mx-auto flex w-full flex-col gap-3"
          data-testid="container"
        >
          <div
            class="mx-auto w-full flex flex-row items-center justify-between gap-4 lg:justify-start"
            data-testid="container"
          >
            <div
              class="animate-pulse bg-muted h-5 w-48 rounded lg:h-8 lg:w-56"
              data-slot="skeleton"
            />
            <div
              class="animate-pulse bg-muted h-6 w-14 rounded-md lg:hidden"
              data-slot="skeleton"
            />
          </div>
          <div
            class="animate-pulse bg-muted hidden h-12 w-20 rounded lg:block lg:h-15"
            data-slot="skeleton"
          />
          <div
            class="animate-pulse bg-muted mt-1 h-3.5 w-44 rounded lg:mt-0"
            data-slot="skeleton"
          />
          <div
            class="mx-auto w-full hidden flex-col gap-1 lg:flex"
            data-testid="container"
          >
            <div
              class="animate-pulse bg-muted h-6 w-24 rounded"
              data-slot="skeleton"
            />
            <div
              class="animate-pulse bg-muted h-6 w-32 rounded"
              data-slot="skeleton"
            />
          </div>
        </div>
        <div
          class="mx-auto w-full flex-col flex gap-2 lg:hidden"
          data-testid="container"
        >
          <div
            class="animate-pulse bg-muted h-6 w-32 rounded"
            data-slot="skeleton"
          />
          <div
            class="animate-pulse bg-muted h-6 w-40 rounded"
            data-slot="skeleton"
          />
        </div>
        <div
          class="animate-pulse bg-muted h-10 w-full rounded-full lg:w-36"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;
